# curioshelf

./: .curioshelf  .gitignore  ARCHITECTURE_V2.md  README.md  TESTING.md  UI_LAYOUT_PATTERNS.md  V2_IMPLEMENTATION_SUMMARY.md  debug_project_dialog.curio  debug_ui_layout.py  demo_script_ui.py  main.py  pyproject.toml  pytest.ini  run.sh  run_tests.py  test_app.py  test_full_project_lifecycle.curio  test_improved_auto_responder.curio  test_message_system.py  test_project_creation_e2e.curio  test_simple_ui.py  test_ui_functionality.py  test_v2_app.py
assets/: README.md
curioshelf/: __init__.py  __main__.py  application.py  application_interface.py  business_logic.py  business_logic_v2.py  config.py  event_execution_layer.py  event_system.py  mock_application.py  models.py  plugin_system.py  project_manager.py  sprite_generator.py  status_bar_handler.py  test_command_handlers.py  ui_abstraction.py  ui_factory_interface.py  ui_instrumentation_server.py  ui_mocks.py  ui_state_manager.py
gui/: canvas_widget.py  main_window.py  main_window_abstracted.py  object_panel.py  objects_tab.py  objects_tab_v2.py  project_dialog.py  project_dialog_abstracted.py  sources_tab.py  sources_tab_v2.py  tabbed_main_window.py  tabbed_main_window_v2.py  template_panel.py  templates_tab.py  ui_factory.py  ui_interface.py
metadata/: current_state.json  example_templates.json
samples/: README.md  sprite_metadata.json
test_support/: test_plugin_loader.py
tests/: __init__.py  command_handlers.py  conftest.py  debug_foreach_runtime.py  debug_ui.py  debug_ui_layout.py  mock_application.py  (+33 more)
(+125 files in other folders)
